--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,8 @@
   margin-left: 100%; }
 
 /*fin de la funcion offset*/
+/*----Inicio Variables Colores----*/
+/*----Fin Variables Colores----*/
 * {
   box-sizing: border-box;
   margin: 0;
