--- a/src/_comun.scss
+++ b/src/_comun.scss
@@ -1,18 +1,18 @@
 body{
-    font-family:'Raleway', sans-serif; ;
+    font-family:'Raleway', sans-serif;
     color: white;
 }
 
 .titulo{
-  font-size: 8vh:  
+  font-size: 8vh;
 }
 
 .subtitulo{
-  font-size: 4vh:  
+  font-size: 4vh;  
 }
 
 .texto{
-  font-size: 2vh:  
+  font-size: 2vh;  
 }
 
 .centerFlex{
