--- a/src/style.scss
+++ b/src/style.scss
@@ -3,9 +3,5 @@
 @import 'variables';
 @import 'about-us';
 @import 'comun';
+@import "formulario";
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
