--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,4 +123,25 @@ body {
   margin: 0;
   padding: 0; }
 
+.prices {
+  background-color: #2c3e50;
+  color: white; }
+  .prices__titulo {
+    padding-top: 100px;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    font-size: 50px; }
+  .prices__separadorCont {
+    margin-bottom: 10px;
+    text-align: center; }
+    .prices__separadorCont--linea {
+      color: white;
+      text-align: center;
+      margin-top: 20px;
+      height: 5px;
+      border: 0;
+      border-top: 1px solid white; }
+  .prices__texto {
+    text-align: center; }
+
 /*# sourceMappingURL=style.css.map */
