--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,147 +1,45 @@
-/*--Iniciando la Gridd--*/
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: block; }
+/*
+Error: Invalid CSS after "@import 'prices'": expected "{", was ";"
+        on line 7 of src/style.scss
 
-.templateRow, .row:before, .row:after {
-  content: " ";
-  display: table;
-  width: 100%; }
+2: @import 'mixin';
+3: @import 'variables';
+4: @import 'about-us';
+5: @import 'comun';
+6: <<<<<<< HEAD
+7: @import 'prices';
+8: 
+9: $font-family-prices:'Roboto', sans-serif;
+10: $centrado:center;
+11: $color-fondo-azulmarino:#2c3e50;
+12: 
 
-.row:after {
-  clear: both; }
-
-[class*="col-"] {
-  min-height: 7px;
-  padding: 12px;
-  float: left; }
-
-[class*="offset-"] {
-  min-height: 7px;
-  float: left; }
-
-.col-1 {
-  width: 8.33333%; }
-
-.col-2 {
-  width: 16.66667%; }
-
-.col-3 {
-  width: 25%; }
-
-.col-4 {
-  width: 33.33333%; }
-
-.col-5 {
-  width: 41.66667%; }
-
-.col-6 {
-  width: 50%; }
-
-.col-7 {
-  width: 58.33333%; }
-
-.col-8 {
-  width: 66.66667%; }
-
-.col-9 {
-  width: 75%; }
-
-.col-10 {
-  width: 83.33333%; }
-
-.col-11 {
-  width: 91.66667%; }
-
-.col-12 {
-  width: 100%; }
-
-/*Finaliza la gridd*/
-/*Funcion para offset*/
-.offset-1 {
-  margin-left: 8.33333%; }
-
-.offset-2 {
-  margin-left: 16.66667%; }
-
-.offset-3 {
-  margin-left: 25%; }
-
-.offset-4 {
-  margin-left: 33.33333%; }
-
-.offset-5 {
-  margin-left: 41.66667%; }
-
-.offset-6 {
-  margin-left: 50%; }
-
-.offset-7 {
-  margin-left: 58.33333%; }
-
-.offset-8 {
-  margin-left: 66.66667%; }
-
-.offset-9 {
-  margin-left: 75%; }
-
-.offset-10 {
-  margin-left: 83.33333%; }
-
-.offset-11 {
-  margin-left: 91.66667%; }
-
-.offset-12 {
-  margin-left: 100%; }
-
-/*fin de la funcion offset*/
-/*----Inicio Variables Colores----*/
-/*----Fin Variables Colores----*/
-body {
-  font-family: 'Raleway', sans-serif;
-  color: white; }
-
-.titulo {
-  font-size: 8vh; }
-
-.subtitulo {
-  font-size: 4vh; }
-
-.texto {
-  font-size: 2vh; }
-
-.centerFlex {
-  justify-content: center; }
-
-.centerGrid {
-  text-align: center; }
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
-
-.prices {
-  background-color: #2c3e50;
-  color: white; }
-  .prices__titulo {
-    padding-top: 100px;
-    font-family: "Roboto", sans-serif;
-    text-align: center;
-    font-size: 50px; }
-  .prices__separadorCont {
-    margin-bottom: 10px;
-    text-align: center; }
-    .prices__separadorCont--linea {
-      color: white;
-      text-align: center;
-      margin-top: 20px;
-      height: 5px;
-      border: 0;
-      border-top: 1px solid white; }
-  .prices__texto {
-    text-align: center; }
-
-/*# sourceMappingURL=style.css.map */
+Backtrace:
+src/style.scss:7
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:1207:in `expected'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:1137:in `expected'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:1132:in `tok!'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:665:in `block'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:658:in `ruleset'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:684:in `block_child'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:677:in `block_contents'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:125:in `stylesheet'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/scss/parser.rb:41:in `parse'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:406:in `_to_tree'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:381:in `_render_with_sourcemap'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/engine.rb:298:in `render_with_sourcemap'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:209:in `each'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/lib/sass/plugin/compiler.rb:331:in `block in watch'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.24/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"@import 'prices'\": expected \"{\", was \";\"\A         on line 7 of src/style.scss\A \A 2: @import 'mixin';\A 3: @import 'variables';\A 4: @import 'about-us';\A 5: @import 'comun';\A 6: <<<<<<< HEAD\A 7: @import 'prices';\A 8: \A 9: $font-family-prices:'Roboto', sans-serif;\A 10: $centrado:center;\A 11: $color-fondo-azulmarino:#2c3e50;\A 12: "; }
