--- a/src/_comun.scss
+++ b/src/_comun.scss
@@ -14,11 +14,14 @@ body{
 }
 
 .subtitulo{
-  font-size: 4vh;  
+  font-size: 4vh;
 }
 
 .texto{
-  font-size: 2vh;  
+  font-size: 2vh;
+}
+.displayFlex{
+  display: flex;
 }
 
 .centerFlex{
