--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,7 @@
+@import 'comun';
 @import 'grid';
 @import 'mixin';
 @import 'variables';
 @import 'about-us';
-@import 'comun';
-@import "formulario";
-
+@import 'formulario';
+@import 'imagenes';
