--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,38 @@ body {
 .centerGrid {
   text-align: center; }
 
+.nav {
+  background-color: #27ad60;
+  height: 100px; }
+
+.nav__items {
+  text-decoration: none;
+  width: 5%;
+  color: white;
+  padding-left: 1%; }
+
+.nav--list {
+  list-style: none;
+  margin-top: 1.5%; }
+
+footer {
+  background-color: #27ad60; }
+
+.col1--list {
+  list-style: none;
+  margin-top: 1.5%;
+  padding: 2%; }
+
+.btn {
+  background-color: #443e44;
+  color: white;
+  border: none;
+  width: 150px;
+  padding: 10px; }
+
+.texo--cafe {
+  color: #443e44; }
+
 * {
   box-sizing: border-box;
   margin: 0;
